samples/_failures_safe/1761201876_ad23be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8b7f16f.c: In function ‘main’:
./samples/SAFE/__tmp_f8b7f16f.c:180:5: error: expected expression at end of input
  180 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_f8b7f16f.c:180:5: error: expected declaration or statement at end of input
